pom fix project url

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>hetu-util</name>
 	<description>Java Utils for Henkilotunnus</description>
-	<url>https://www.ishtech.fi/java/utils/hetu</url>
+	<url>https://www.ishtech.fi/projects/hetu-util-java</url>
 
 	<organization>
 		<name>IshTech</name>
