pom add packaging type and remove redundant compile plugin

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<groupId>fi.ishtech.utils</groupId>
 	<artifactId>hetu-util</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<name>hetu-util</name>
 	<description>Java Utils for Henkilotunnus</description>
@@ -61,15 +62,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
