--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
 
 	<profiles>
 		<profile>
-			<id>central</id>
+			<id>gpg</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -114,6 +114,13 @@
 							</execution>
 						</executions>
 					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>central-publishing</id>
+			<build>
+				<plugins>
 					<plugin>
 						<groupId>org.sonatype.central</groupId>
 						<artifactId>central-publishing-maven-plugin</artifactId>
